started polymer question form

--- a/EmployeesEvaluation.WEB/Views/Shared/_Layout.cshtml
+++ b/EmployeesEvaluation.WEB/Views/Shared/_Layout.cshtml
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EmployeesEvaluation.WEB</title>
 
+    <link rel="import" href="~/lib/polymer/polymer.html" />
+    <script src="~/lib/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="~/lib/paper-dropdown-menu/paper-dropdown-menu.html" />
+    <link rel="import" href="~/lib/paper-item/paper-item.html" />
+    <link rel="import" href="~/lib/paper-listbox/paper-listbox.html" />
+
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/lib/kendo-ui/styles/kendo.common-nova.min.css" />
