--- a/EmployeesEvaluation.WEB/Views/Home/About.cshtml
+++ b/EmployeesEvaluation.WEB/Views/Home/About.cshtml
@@ -8,6 +8,18 @@
 
 <h2>Kendo UI DatePicker</h2>
 
+
+<paper-dropdown-menu label="Dinosaurs">
+    <paper-listbox class="dropdown-content" selected="1">
+        <paper-item>allosaurus</paper-item>
+        <paper-item>brontosaurus</paper-item>
+        <paper-item>carcharodontosaurus</paper-item>
+        <paper-item>diplodocus</paper-item>
+    </paper-listbox>
+</paper-dropdown-menu>
+
+<p>&nbsp;</p>
+
 @(Html.Kendo().DatePicker()
                 .Name("datepicker")
                 .Deferred()
