polymer save question

--- a/EmployeesEvaluation.WEB/Views/Questions/NewPolymer.cshtml
+++ b/EmployeesEvaluation.WEB/Views/Questions/NewPolymer.cshtml
@@ -5,10 +5,10 @@
 
 <link rel="import" href="~/WebComponents/question-form.html" />
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div class="col-md-12">
-
+    <hr />
     <question-form></question-form>
 
 
