Fixed UX evaluation form

--- a/EmployeesEvaluation.WEB/Views/Shared/_NavBar.cshtml
+++ b/EmployeesEvaluation.WEB/Views/Shared/_NavBar.cshtml
@@ -80,6 +80,9 @@
                             <a asp-area="" asp-controller="Evaluations" asp-action="New">New Evaluation</a>
                         </li>
                         <li>
+                            <a asp-area="" asp-controller="Evaluations" asp-action="NewPolymer">New Evaluation Polymer</a>
+                        </li>
+                        <li>
                             <a asp-area="" asp-controller="Evaluations" asp-action="Assign">Assign Evaluation</a>
                         </li>
                         }
